--- a/mailserver/roles/mailserver/tasks/main.yml
+++ b/mailserver/roles/mailserver/tasks/main.yml
@@ -23,28 +23,19 @@
     - fetchmail
     - procmail
 
-- name: create virtual mail group
-  group: name=vmail gid=5000 state=present
-
-- name: create virtual mail user
-  user: name=vmail group=vmail uid=5000 home=/mail createhome=yes
-
 # configure postfix
 - name: install postfix main.cf
   template: src=main.cf.j2 dest=/etc/postfix/main.cf
 
-- name: install postfix vhosts.map
-  template: src=vhosts.map.j2 dest=/etc/postfix/vhosts.map
+# configure procmail
+- name: install procmailrc
+  copy: src=procmailrc dest=/etc/procmailrc owner=root
 
-- name: install postfix vmailboxes.map
-  template: src=vmailboxes.map.j2 dest=/etc/postfix/vmailboxes.map
-  notify: rehash vmailboxes.map
-
-- name: install postfix valias.map
-  template: src=valias.map.j2 dest=/etc/postfix/valias.map
-  notify: rehash valias.map
+# configure fetchmail
+- name: install fetchmailrc
+  copy: src=fetchmailrc dest=/etc/fetchmailrc owner=root mode=600
 
 # configure dovecot
-# configure fetchmail
+
 
 
