--- a/mailserver/roles/common/tasks/main.yml
+++ b/mailserver/roles/common/tasks/main.yml
@@ -1,9 +1,24 @@
 ---
 # This sets up the basic system
 
-- name: Install ntp
-  apt: name=ntp state=present
-  tags: ntp
+- name: Update apt cache
+  apt: update_cache=yes
+
+- name: Upgrade all safe packages
+  apt: upgrade=safe
+
+- name: Install tools
+  apt: name={{item}} state=present
+  with_items:
+    - ntp
+    - vim
+    - vim-scripts
+    - git
+    - tig
+    - etckeeper
+    - screen
+    - zsh
+    - build-essential
 
 - name: Configure ntp
   template: src=ntp.conf.j2 dest=/etc/ntp.conf
@@ -13,14 +28,6 @@
 - name: Start ntp
   service: name=ntpd state=started enabled=true
   tags: ntp
-
-- name: Install tools
-  apt: name={{item}} state=present
-  with_items:
-    - vim
-    - vim-scripts
-    - tig
-    - etckeeper
 
 - name: Install vim configuration
   copy: src=vimrc.local dest=/etc/vim/vimrc.local
