--- a/mailserver/site.yml
+++ b/mailserver/site.yml
@@ -1,10 +1,10 @@
 ---
 # This playbook sets up a mail server on debian 7.1
 
-- name: set up a mail server
-  hosts: 127.0.0.1
-  connection: local
-  user: root
+- hosts: all
+  user: krig
+  sudo: True
+  gather_facts: True
 
   roles:
     - common
