--- a/mailserver/roles/mailserver/handlers/main.yml
+++ b/mailserver/roles/mailserver/handlers/main.yml
@@ -1,9 +1,8 @@
 ---
 # handlers for mailserver installation
-
 - name: restart postfix
   service: name=postfix state=restarted
 
-  name: restart dovecot
+- name: restart dovecot
   service: name=dovecot state=restarted
 
