--- a/mailserver/roles/mailserver/files/10-master.conf
+++ b/mailserver/roles/mailserver/files/10-master.conf
@@ -17,7 +17,6 @@
 service imap-login {
   inet_listener imap {
     #port = 143
-    port = 0
   }
   inet_listener imaps {
     #port = 993
@@ -95,9 +94,11 @@ service auth {
   }
 
   # Postfix smtp-auth
-  #unix_listener /var/spool/postfix/private/auth {
-  #  mode = 0666
-  #}
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0666
+    user = postfix
+    group = postfix
+  }
 
   # Auth process is run as this user.
   #user = $default_internal_user
